--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,8 @@ dependencies {
 
     implementation "com.github.MackHartley:RoundedProgressBar:$roundedprogress_Version"
 
+    implementation "pub.devrel:easypermissions:$easy_version"
+
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
